Changed the Core sample name.

--- a/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/Views/Home/Index.cshtml
+++ b/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Syncfusion.Server.EmbedBoldBI.Models;
+﻿@using BoldBI.Embedded.Sample.Models;
 @{
     ViewBag.Title = "Home";
     Layout = null;
