--- a/SDK Samples/C#/ASP.NET MVC/Syncfusion.Server.EmbedBoldBI/Views/Home/Index.cshtml
+++ b/SDK Samples/C#/ASP.NET MVC/Syncfusion.Server.EmbedBoldBI/Views/Home/Index.cshtml
@@ -8,12 +8,12 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
     <link rel="stylesheet" href="~/Content/Site.css" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/1.0.5/jsrender.min.js"></script>
-    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v5.1.55/embed-js.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/1.0.0-beta/jsrender.min.js"></script>
+    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v5.2.48/embed-js.js"></script>
     <script type="text/javascript" src="~/Scripts/Embed/Index.js"></script>
     <script type="text/javascript">
         var rootUrl = "@EmbedProperties.RootUrl";
