--- a/SDK Samples/C#/Blazor with Javascript/BoldBIEmbedSample/Pages/_Host.cshtml
+++ b/SDK Samples/C#/Blazor with Javascript/BoldBIEmbedSample/Pages/_Host.cshtml
@@ -17,10 +17,10 @@
 </head>
 <body>
     @*<app>
-        <component type="typeof(App)" render-mode="ServerPrerendered" />
-    </app>*@
+            <component type="typeof(App)" render-mode="ServerPrerendered" />
+        </app>*@
 
-    
+
     <div id="dashboard"></div>
 
     <div id="blazor-error-ui">
@@ -37,14 +37,15 @@
     <script src="_framework/blazor.server.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/1.0.5/jsrender.min.js"></script>
-    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v5.1.55/embed-js.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/1.0.0-beta/jsrender.min.js"></script>
+    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v5.2.48/embed-js.js"></script>
     <script>
-        var rootUrl = ""; //Please provide the server url
+        var rootUrl = "http://localhost:1234/bi"; //Please provide the server url
         var siteIdentifier = "site/site1";
         var authorizationServerUrl = "api/EmbedData/GetDetails";
-        var dashboardId = "8f24de87-1489-441a-8935-8dcc7d91fd9f"; //Please provide the required dashboard Id.
-        $(document).ready(function(){
+        var dashboardId = "11534748-d22f-440c-a19b-e778c7d2b296"; //Please provide the required dashboard Id.
+        $(document).ready(function () {
             this.dashboard = BoldBI.create({
                 serverUrl: rootUrl + "/" + siteIdentifier,
                 dashboardId: dashboardId,
