Update the latest wrapper changes.

--- a/Scenario Based Samples/Adhoc-Create,Edit, Delete BoldBI Embedded/EmbededShell/EmbeddedbiShell/Views/Shared/_Layout.cshtml
+++ b/Scenario Based Samples/Adhoc-Create,Edit, Delete BoldBI Embedded/EmbededShell/EmbeddedbiShell/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.1.2.min.js"></script>
     @*<script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v3.2.16/embed-js.beta.min.js"></script>*@
     @*<script type="text/javascript" src="~/js/EmbedBiWrapper.js"></script>*@
-    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v3.3.40/embed-js.js"></script>
+    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v5.3.53/boldbi-embed.js"></script>
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     @*<script type="text/javascript" src="~/js/ej2.web.all.min.js"></script>*@
