--- a/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/Views/Home/Index.cshtml
+++ b/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/1.0.5/jsrender.min.js"></script>
-    <script type="text/javascript" src="http://cdn.boldbi.com/embedded-sdk/v3.3.40/embed-js.js"></script>
+    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v5.3.53/boldbi-embed.js"></script>
     <script type="text/javascript" src="~/js/Embed/Index.js"></script>
     <script type="text/javascript">
         var rootUrl = "@GlobalAppSettings.EmbedDetails.ServerUrl";
