--- a/Scenario Based Samples/Tabbed View of Bold BI Embedded/EmbededShell/EmbeddedbiShell/Views/Home/DashboardPage.cshtml
+++ b/Scenario Based Samples/Tabbed View of Bold BI Embedded/EmbededShell/EmbeddedbiShell/Views/Home/DashboardPage.cshtml
@@ -132,7 +132,7 @@
 @*<script type="text/javascript" src="~/js/EmbedBiWrapper.js"></script>*@
 @if ((isEdit.ToString().ToLower()) == "true")
 {
-    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v3.3.40/embed-js.js"></script>
+    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v5.3.53/boldbi-embed.js"></script>
 }
 <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
 <link href="//cdn.syncfusion.com/ej2/ej2-base/styles/material.css" rel="stylesheet">
