--- a/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/wwwroot/css/Site.css
+++ b/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/wwwroot/css/Site.css
@@ -141,3 +141,21 @@ ul {
     height: 900px;
     border: 2px solid #333;
 }
+
+#custom_ok_button {
+    margin: 10px 0;
+    padding: 4px 8px;
+    font-size: 16px;
+    line-height: 24px;
+    border-radius: 4px;
+    background: #fff;
+    border: 0.5px solid #e2e8f0;
+    color: #2d3748;
+    float: right;
+    margin-left: 12px;
+    margin-right: 17px;
+}
+
+#sample_dialog{
+    width: 385px;
+}
