--- a/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/Views/Home/Index.cshtml
+++ b/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="~/css/Site.css" />
-    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v6.2.7/boldbi-embed.js"></script>
+    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/latest/boldbi-embed.js"></script>
     <script type="text/javascript" src="~/js/Embed/Index.js"></script>
     <script type="text/javascript">
         var rootUrl = "@GlobalAppSettings.EmbedDetails.ServerUrl";
