--- a/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/Views/_ViewImports.cshtml
+++ b/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/Views/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using IframeFullServer
-@using IframeFullServer.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
