--- a/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/Views/Home/Embed.cshtml
+++ b/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/Views/Home/Embed.cshtml
@@ -1,7 +1,7 @@
 <div id="container">
     @if (ViewBag.IsAuthenticated)
     {
-        <iframe src='http://localhost:58295/bi/site/site1' width='100%' height='850px'></iframe>
+        <iframe src='http://localhost:44383/Home/JWTLogin' width='100%' height='850px'></iframe>
     }
     else
     {
