Removed unwanted files

--- a/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/Views/Shared/_Layout.cshtml
+++ b/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewBag.Title - My ASP.NET Core MVC Application</title>
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <script src="~/lib/modernizr/modernizr.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -42,6 +41,6 @@
         </footer>
     </div>
     <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    @* <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script> *@
 </body>
 </html>
