Included the documentation for the widget dashboard parameter sample works

--- a/Scenario Based Samples/Dashboard-Parameter-In-Widget-Embedding/BoldBI.Embed.Sample/Views/Home/Index.cshtml
+++ b/Scenario Based Samples/Dashboard-Parameter-In-Widget-Embedding/BoldBI.Embed.Sample/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
         <div id="dashboard"></div>
     </div>
     <div id="container">
-        <div id="property-header" style="font-size: 15px; font-weight: 600; padding: 20px 0px 6px 15px;">Dashboard Parameter Filter</div>
+        <div id="property-header" style="font-size: 15px; font-weight: 600; padding: 20px 0px 6px 15px;">Dashboard Parameter</div>
         <div id="sample_properties" class="e-dbrd-control" style="padding:12px;">
             <textarea id="description" spellcheck="false" style="padding-left:5px; height:90px; border-color: rgba(0, 0, 0, 0.22); border-width: 1px; resize: none;"></textarea>
             <div class="apply-button">
