--- a/Scenario Based Samples/Save-and-SaveAs-Filter-View/BoldBI.Embed.Sample/Views/Home/DashboardListing.cshtml
+++ b/Scenario Based Samples/Save-and-SaveAs-Filter-View/BoldBI.Embed.Sample/Views/Home/DashboardListing.cshtml
@@ -8,16 +8,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="~/css/Site.css" />
-    <link rel="stylesheet" href="~/css/View.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
-
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/1.0.0-beta/jsrender.min.js"></script>
-
-    <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
+    <link href="~/css/view.css" rel="stylesheet" />
     <script type="text/javascript" src="~/js/EmbedWrapper.js"></script>
     <script type="text/javascript" src="~/js/Index.js"></script>
     <script type="text/javascript" src="~/js/View.js"></script>
@@ -32,7 +23,7 @@
     </script>
 </head>
 
-<body onload="DashboardListing()">
+<body onload="Init()">
     <div id="container">
         <div class="header-section">
             <div id="grid-title">All Dashboard</div>
