--- a/Scenario Based Samples/Save-and-SaveAs-Filter-View/BoldBI.Embed.Sample/wwwroot/css/Site.css
+++ b/Scenario Based Samples/Save-and-SaveAs-Filter-View/BoldBI.Embed.Sample/wwwroot/css/Site.css
@@ -49,16 +49,15 @@ ul {
 }
 
 #container {
-    width: 13.9%;
+    width: 13%;
     float: left;
     height: 100%;
     float: left;
-    background: #fff;
+    background: #f4f4f4;
     height: 100%;
     box-shadow: 2px 0 4px 0 rgba(0, 0, 0, .12);
     overflow: auto;
     overflow-x: hidden;
-    border-left: 1px solid #c8c8c8;
 }
 
 #grid-title {
@@ -88,10 +87,9 @@ ul {
 }
 
 #viewer-section {
-    width: 86%;
+    width: 87%;
     height: 100%;
     float: left;
-    overflow: hidden;
 }
 
 #viewer-header {
@@ -143,52 +141,6 @@ ul {
     height: 900px;
     border: 2px solid #333;
 }
-
-.e-prop-header {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-}
-    .e-prop-header p {
-        color: #1b1e24;
-        font-family: 'Roboto';
-        font-size: 15px;
-        font-weight: bold;
-        font-style: normal;
-        padding-left: 10px;
-    }
-
-.e-prop-item {
-    padding: 5px;
-    font-size: 15px;
-    font-weight: normal;
-    padding-top: 8px;
-    padding-bottom: 5px;
-}
-
-#paraElement .dropdown-control span {
-    margin-left: 8px;
-}
-
-.apply-button {
-    text-align: center;
-    margin-top: 10px;
-}
-
-    .apply-button button {
-        background: #ff4081;
-        color: #fff;
-        border: 1px solid #ff4081;
-        margin-top: 10px;
-        padding: 8px;
-        margin-top: 10px;
-        width: 90%;
-        border-radius: 5px;
-        font-size: 14px;
-        cursor: pointer;
-        text-align: center;
-        line-height: 14px;
-    }
 
 #custom_ok_button {
     margin: 10px 0;
