--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.html
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.html
@@ -27,7 +27,7 @@
     </form>
     <div class="error-message" *ngIf="loginError">{{ loginError }}</div>
     <div class="small text-secondary mt-3 d-none d-sm-flex">
-      <strong>Example logins</strong>
+      <strong>User logins</strong>
       <ul>
         <li>Admin: Admin@123</li>
         <li>John: John@123</li>
