Changed the APIURL

--- a/Scenario Based Samples/JWT Login with Datasource Filter/angular/web-client/src/app/login/login.component.html
+++ b/Scenario Based Samples/JWT Login with Datasource Filter/angular/web-client/src/app/login/login.component.html
@@ -29,10 +29,10 @@
     <div class="small text-secondary mt-3 d-none d-sm-flex">
       <strong>Example logins</strong>
       <ul>
-        <li>Admin: securePassword</li>
-        <li>John Smith: password1</li>
-        <li>Sarah Johnson: password2</li>
-        <li>Michael Brown: password3</li>
+        <li>Admin: Admin@123</li>
+        <li>John: John@123</li>
+        <li>Sarah: Sarah@123</li>
+        <li>Michael: Michael@123</li>
       </ul>
     </div>
   </div>
