Removed unwanted files and revamped code updated readme file

--- a/Scenario Based Samples/Iframe Based Dashboard Listing/IframeSolutionSample/Views/Shared/_Layout.cshtml
+++ b/Scenario Based Samples/Iframe Based Dashboard Listing/IframeSolutionSample/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="icon" href="/favicon.ico">
-    <title>BoldBI</title>
+    <title>Iframe Dashboards</title>
     <link href="~/css/themes/adminlte.min.css" rel="stylesheet" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
