Handled cloud server APIs

--- a/Scenario Based Samples/Add Analysis Widget sample/EmbededShell/EmbeddedbiShell/Views/Shared/_Layout.cshtml
+++ b/Scenario Based Samples/Add Analysis Widget sample/EmbededShell/EmbeddedbiShell/Views/Shared/_Layout.cshtml
@@ -85,8 +85,7 @@
     <script type="text/javascript" src="~/js/application/jquery.overlayScrollbars.js"></script>
     <script type="text/javascript" src="~/js/application/adminlte.js"></script>
     <script type="text/javascript" src="~/js/application/demo.js"></script>
-@*     <script type="text/javascript" src="~/js/EmbedBIWrapper.js"></script>
- *@    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/latest/boldbi-embed.js"></script>
+    <script type="text/javascript" src="~/js/EmbedBIWrapper.js"></script>
 
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
