--- a/Scenario Based Samples/Save-and-SaveAs-Filter-View/BoldBI.Embed.Sample/Views/Home/Index.cshtml
+++ b/Scenario Based Samples/Save-and-SaveAs-Filter-View/BoldBI.Embed.Sample/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <head>
     <link rel="stylesheet" href="~/css/Site.css" />
     <link href="~/css/view.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/js/EmbedWrapper.js"></script>
+    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/latest/boldbi-embed.js"></script>
     <script type="text/javascript" src="~/js/Index.js"></script>
     <script type="text/javascript" src="~/js/View.js"></script>
     <script type="text/javascript">
