--- a/Scenario Based Samples/Widget embedding with filters/ClientApp/src/WidgetEmbedding/widget.css
+++ b/Scenario Based Samples/Widget embedding with filters/ClientApp/src/WidgetEmbedding/widget.css
@@ -5,6 +5,7 @@ app-root {
     height: 100%;
     margin: 0;
     font-size: 13px;
+    overflow: hidden;
 }
 .dimension-initial ul {
     padding-left: 50px !important;
@@ -17,6 +18,7 @@ app-root {
     border-left: 0.5px solid #7F889E;
     overflow: auto;
     overflow-x: hidden;
+    font-family: Roboto, Heebo, Segoes UI-MONOSPACE;
 }
 .property-header {
     height: 5%;
@@ -26,11 +28,8 @@ app-root {
 }
 .dimension-filter {
     height: 50%;
-    font-size: 18px;
-    padding: 0 12px;
-}
-.dimension-filter p {
     font-size: 15px;
+    padding: 0 12px;
 }
 #heading-content {
     width: 300px;
@@ -51,7 +50,7 @@ app-root {
 .dimension-ondemand button:hover {
     cursor: pointer;
     color: black;
-    background-color: #ebb8c9;
+    background-color: #ff80a4;
 }
 .filter-button {
     text-align: center;
