--- a/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/Views/Home/Index.cshtml
+++ b/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/Views/Home/Index.cshtml
@@ -9,20 +9,18 @@
 
 <head>
     <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/latest/boldbi-embed.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
     <link rel="stylesheet" href="~/css/Site.css" />
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/1.0.5/jsrender.min.js"></script>
     <script type="text/javascript" src="~/js/Embed/Index.js"></script>
     <script type="text/javascript">
-        var rootUrl = "@ViewBag.ServerUrl";
-        var dashboardId = "@ViewBag.DashboardId";
-        var siteIdentifier = "@ViewBag.SiteIdentifier";
-        var environment = "@ViewBag.Environment";
-        var embedType = "@ViewBag.EmbedType";
+        
+        var rootUrl = "@ViewBag.EmbedDetails.ServerUrl";
+        var dashboardId = "@ViewBag.EmbedDetails.DashboardId";
+        var siteIdentifier = "@ViewBag.EmbedDetails.SiteIdentifier";
+        var environment = "@ViewBag.EmbedDetails.Environment";
+        var embedType = "@ViewBag.EmbedDetails.EmbedType";
         var authorizationServerUrl = "@Url.Action("GetDetails", "Home")";
         var getDashboardsUrl = "@Url.Action("GetDashboards", "Home")";
+    
     </script>
 </head>
 
