--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.html
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.html
@@ -1,15 +1,16 @@
 <!-- login.component.html -->
 
 <div class="login-container">
+  <div class="child-div" style="width: 325px;">
     <h2 class="login-header">Login</h2>
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
-        <label for="username">Username</label>
+        <label for="useremail">Useremail</label>
         <input
           type="text"
-          id="username"
-          name="username"
-          [(ngModel)]="username"
+          id="useremail"
+          name="useremail"
+          [(ngModel)]="useremail"
           required
         />
       </div>
@@ -26,14 +27,135 @@
       <button type="submit" class="login-button">Login</button>
     </form>
     <div class="error-message" *ngIf="loginError">{{ loginError }}</div>
-    <div class="small text-secondary mt-3 d-none d-sm-flex">
-      <strong>User logins</strong>
-      <ul>
-        <li>Admin: Admin@123</li>
-        <li>John: John@123</li>
-        <li>Sarah: Sarah@123</li>
-        <li>Michael: Michael@123</li>
-      </ul>
+    <div class="site-description">
+      <p>By leveraging the custom attribute in the embedding application, we have 4 set of database for each tenant and passing the filter access department-specific data. The Admin of each tenant gains insights of all data and other can access their specific data. Please refer the table for custom attributes and filter values.</p>
     </div>
   </div>
+  <hr class="divider">
+    <div class="small text-secondary mt-3 d-none d-sm-flex">
+      <div class="credentials" style="width: 100%;">
+        <table>
+          <thead>
+            <tr>
+              <th rowspan="2">Tenants</th>
+              <th>User Email</th>
+              <th>Password</th>
+              <th>Role</th>
+              <th>Custom Attribute</th>
+              <th>Filter Parameter</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td rowspan="4">Alpha Electronics</td>
+              <td>emily@alphaelectronics.com</td>
+              <td>emily@123</td>
+              <td>Admin</td>
+              <td rowspan="4">"Custom_Attribute" : "alpha_electronics_sales_analysis"</td>
+              <td>nill</td>
+            </tr>
+            <tr>
+              <td>john@alphaelectronics.com</td>
+              <td>john@123</td>
+              <td>Manager</td>
+              <td>useremail = "john@alphaelectronics.com"</td>
+            </tr>
+            <tr>
+              <td>sarah@alphaelectronics.com</td>
+              <td>sarah@123</td>
+              <td>Sales</td>
+              <td>useremail = "sarah@alphaelectronics.com"</td>
+            </tr>
+            <tr>
+              <td>michael@alphaelectronics.com</td>
+              <td>michael@123</td>
+              <td>Support</td>
+              <td>useremail = "michael@alphaelectronics.com"</td>
+            </tr>
+            <tbody>
+              <tr>
+                <td rowspan="4">Beta Enterprises</td>
+                <td>david.miller@betaenterprises.com</td>
+                <td>David@202</td>
+                <td>Admin</td>
+                <td rowspan="4">"Custom_Attribute" : "beta_enterprises_sales_analysis"</td>
+                <td>nill</td>
+              </tr>
+              <tr>
+                <td>lisa.johnson@betaenterprises.com</td>
+                <td>Lisa@303</td>
+                <td>Manager</td>
+                <td>useremail = "lisa.johnson@betaenterprises.com"</td>
+              </tr>
+              <tr>
+                <td>chris.white@betaenterprises.com</td>
+                <td>chris.white@123</td>
+                <td>Sales</td>
+                <td>useremail = "chris.white@betaenterprises.com"</td>
+              </tr>
+              <tr>
+                <td>sophia.lee@betaenterprises.com</td>
+                <td>Sophia@1213</td>
+                <td>Support</td>
+                <td>useremail = "chris.white@betaenterprises.com"</td>
+              </tr>
+              <tbody>
+                <tr>
+                  <td rowspan="4">Gamma Industries</td>
+                  <td>jessica.taylor@gammaindustries.com</td>
+                  <td>jessica@505</td>
+                  <td>Admin</td>
+                  <td rowspan="4">"Custom_Attribute" : "gamma_industries_sales_analysis"</td>
+                  <td>nill</td>
+                </tr>
+                <tr>
+                  <td>matthew.lee@gammaindustries.com</td>
+                  <td>matthew@606</td>
+                  <td>Manager</td>
+                  <td>useremail = "matthew.lee@gammaindustries.com"</td>
+                </tr>
+                <tr>
+                  <td>amanda.green@gammaindustries.com</td>
+                  <td>amanda@707</td>
+                  <td>Support</td>
+                  <td>useremail = "amanda.green@gammaindustries.com"</td>
+                </tr>
+                <tr>
+                  <td>kevin.smith@gammaindustries.com</td>
+                  <td>kevin@808</td>
+                  <td>Sales</td>
+                  <td>useremail = "kevin.smith@gammaindustries.com"</td>
+                </tr>
+                <tr>
+                  <td rowspan="4">Delta Crops</td>
+                  <td>rachel.adams@deltacorps.com</td>
+                  <td>rachel@909</td>
+                  <td>Admin</td>
+                  <td rowspan="4">"Custom_Attribute" : "delta_industries_sales_analysis"</td>
+                  <td>nill</td>
+                </tr>
+                <tr>
+                  <td>james.wilson@deltacorps.com</td>
+                  <td>James@123</td>
+                  <td>Manager</td>
+                  <td>useremail = "james.wilson@deltacorps.com"</td>
+                </tr>
+                <tr>
+                  <td>olivia.martin@deltacorps.com</td>
+                  <td>olivia@5678</td>
+                  <td>Support</td>
+                  <td>useremail = "olivia.martin@deltacorps.com"</td>
+                </tr>
+                <tr>
+                  <td>robert.jones@deltacorps.com</td>
+                  <td>robert@1234</td>
+                  <td>Sales</td>
+                  <td>useremail = "robert.jones@deltacorps.com"</td>
+                </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+</div>
+
   
