made the content justify

--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.scss
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.scss
@@ -127,5 +127,5 @@
   margin-top: 20px; /* Space between the login button and the explanation */
   font-size: 14px; /* Smaller font size for the explanation */
   color: #555; /* Lighter text color for the explanation */
-  text-align: center; /* Center-align the text */
+  text-align: justify;
 }
