Removed the unwanted files

--- a/Scenario Based Samples/Schedule Creaation JS Based Embedding/BoldBI.Embed.Sample/Views/Home/Index.cshtml
+++ b/Scenario Based Samples/Schedule Creaation JS Based Embedding/BoldBI.Embed.Sample/Views/Home/Index.cshtml
@@ -182,7 +182,7 @@
         var loader = document.getElementById("loader-overlay");
         loader.style.display = "flex";
         dialogOverlay.style.display = 'block';
-        iframeContainer.src = ''; // Replace with your schedule page URL
+        iframeContainer.src = 'http://localhost:63316/bi/site/site1/schedules/schedule-dialog?itemName=Sales%20Analysis%20Dashboard&&itemId=a304d87c-ec0d-4bff-b7b3-4b24002e1124&&categoryName=Getting%20Started%20Tutorial&&categoryId=b62b3897-6202-49f2-86d0-530c43a3512b&&viewId=&&canDisableDashboardChange=true&&CanDisableCategoryChange=true&&CanDisableViewChange=true&&canShowViewDropDown=false&&disableWidgetScheduleExport=true&&actionType=Create&isembed=true'; // Replace with your schedule page URL
     }
         
     function closeDialogBox() {
